dbeaver/pro#3257 Fix code style